# python-project-50

./: .coverage  .gitignore  Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: Run-Pytest-and-flake8.yml  run-pytest-and-flake8.yml
formater/: __init__.py  json.py  plain.py  stylish.py
gendiff/: __init__.py  cli.py  collect_diff.py  command.py  gendiff.py  parser.py
script/: gendiff.py
tests/: test_collect_diff.py  test_command.py  test_gendiff.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: file1.yaml  file2.yml  file3.yaml  file4.yml  raw_diff.json  raw_diff.yaml  res_flat_yaml.txt  res_json_out.txt  res_nested_yaml.txt
