[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ribeyra <ribeyra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
